feat add all functionality

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -12,7 +12,7 @@
   background-color: transparent;
   display: flex;
   box-sizing: content-box;
-  align-self: flex-end;
+  align-self: center;
   transition: 0.3s;
 }
 
