--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -6,7 +6,9 @@
   color: white;
   font-weight: 400;
   width: 336px;
-  padding-top: 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -19,6 +21,6 @@
     text-align: center;
     font-size: 14px;
     margin-bottom: 36px;
-    padding-top: 14px;
+    padding-top: 6px;
   }
 } 
