--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,30 +1,28 @@
 .profile__title{
-  width: 336px;
+  width: 294px;
   margin: 0;
   padding: 0;
   font-size: 42px;
   line-height: 1.14;
   color: white;
   font-weight: 500;
-  display: flex;
   text-align: left;
-  justify-content: space-between;
-  text-align: left;
-  vertical-align: top;
-  height: 39px;
+  min-height: 55px;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow:  visible;
+  overflow: hidden;
+  margin-right: 18px;
+  vertical-align: top;
 }
 
 @media screen and (max-width: 980px) {
   .profile__title{
     padding-left: 65px;
-    width: 217px;
+    width: 189px;
+    margin-right: 10px;
     font-size: 27px;
     line-height: 1.21;
-    height: 26px;
+    min-height: 32px;
     padding-left: 65px;
-    border: red solid 1px;
   }
 } 
