--- a/pages/index.css
+++ b/pages/index.css
@@ -1,43 +1,33 @@
-@import url(../vendor/normalize.css); 
-@import url(../inter/inter.css);
-@import url(../blocks/page/page.css);
-@import url(../blocks/header/header.css);
-@import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/header__line.css);
-@import url(../blocks/profile/profile.css);
-@import url(../blocks/profile/__info/profile__info.css);
-@import url(../blocks/profile/__avatar/profile__avatar.css);
-@import url(../blocks/profile/__edit-button/profile__edit-button.css);
-@import url(../blocks/profile/__title/profile__title.css);
-@import url(../blocks/profile/__subtitle/profile__subtitle.css);
-@import url(../blocks/profile/__add-button/profile__add-button.css);
-@import url(../blocks/elements/elements.css);
-@import url(../blocks/element/element.css);
-@import url(../blocks/element/__action-panel/element__action-panel.css);
-@import url(../blocks/element/__heart-icon/_active/element__heart-icon_active.css);
-@import url(../blocks/element/__heart-icon/element__heart-icon.css);
-@import url(../blocks/element/__name/element__name.css);
-@import url(../blocks/element/__pic/element__pic.css);
-@import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__copyright/footer__copyright.css);
-@import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/_opened/popup_opened.css);
-@import url(../blocks/popup/__close-button/popup__close-button.css);
-@import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__header/popup__header.css);
-@import url(../blocks/popup/__job-input/popup__job-input.css);
-@import url(../blocks/popup/__name-input/popup__name-input.css);
-@import url(../blocks/popup/__save-button/popup__save-button.css);
-@import url(../);
-@import url(../);
-@import url(../);
-@import url(../);
-@import url(../);
-@import url(../);
-@import url(../);
-@import url(../);
-@import url(../);
-@import url(../);
-@import url(../);
+@import url('../vendor/normalize.css'); 
+@import url('../inter/inter.css');
+@import url('../blocks/page/page.css');
+@import url('../blocks/header/header.css');
+@import url('../blocks/header/__logo/header__logo.css');
+@import url('../blocks/header/__line/header__line.css');
+@import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__info/profile__info.css');
+@import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__edit-button/profile__edit-button.css');
+@import url('../blocks/profile/__title/profile__title.css');
+@import url('../blocks/profile/__subtitle/profile__subtitle.css');
+@import url('../blocks/profile/__add-button/profile__add-button.css');
+@import url('../blocks/elements/elements.css');
+@import url('../blocks/element/element.css');
+@import url('../blocks/element/__action-panel/element__action-panel.css');
+@import url('../blocks/element/__heart-icon/_active/element__heart-icon_active.css');
+@import url('../blocks/element/__heart-icon/element__heart-icon.css');
+@import url('../blocks/element/__name/element__name.css');
+@import url('../blocks/element/__pic/element__pic.css');
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__copyright/footer__copyright.css');
+@import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/_opened/popup_opened.css');
+@import url('../blocks/popup/__close-button/popup__close-button.css');
+@import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__header/popup__header.css');
+@import url('../blocks/popup/__job-input/popup__job-input.css');
+@import url('../blocks/popup/__name-input/popup__name-input.css');
+@import url('../blocks/popup/__save-button/popup__save-button.css');
+
 
 
