fix: поправить замечания по ревью

--- a/blocks/element/__action-panel/element__action-panel.css
+++ b/blocks/element/__action-panel/element__action-panel.css
@@ -1,6 +1,6 @@
 .element__action-panel{
   background-color: white;
-  height: 23px;
+  min-height: 23px;
   width: 246px;
   display: flex;
   flex-direction: row;
