--- a/blocks/element/__heart-icon/element__heart-icon.css
+++ b/blocks/element/__heart-icon/element__heart-icon.css
@@ -1,5 +1,5 @@
 .element__heart-icon{
-  background-image: url(element__heart-icon.svg);
+  background-image: url(../../../images/element__heart-icon.svg);
   background-position: 100% auto;
   width: 22px;
   height: 19px;
