--- a/blocks/element/__heart-icon/_active/element__heart-icon_active.css
+++ b/blocks/element/__heart-icon/_active/element__heart-icon_active.css
@@ -1,3 +1,3 @@
 .element__heart-icon_active{
-  background-image: url(element__heart-icon_active.svg);
+  background-image: url(../../../../images/element__heart-icon_active.png.svg);
 }
