--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,9 +1,9 @@
 .element{
-  height: 361px;
   width: 282px;
   display: flex;
   flex-direction: column;
   background-color: white;
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 10px;
   box-sizing: border-box;
+  padding-bottom: 31px;
 }
