--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,7 +1,7 @@
 .profile__add-button{
   width: 150px;
   height: 50px;
-  background-image: url(profile__add-button.svg);
+  background-image: url(../../../images/profile__add-button.svg);
   background-position: bottom;
   background-size: contain;
   background-repeat: no-repeat;
@@ -25,6 +25,6 @@
   .profile__add-button{
     width: 282px;
     height: 50px;
-    background-image: url(profile__add-button_large.svg);
+    background-image: url(../../../images/profile__add-button_large.svg);
   }
 } 
