--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,7 @@
 .profile__edit-button{
   width: 24px;
   height: 24px;
-  background-image: url(profile__edit-button.svg);
+  background-image: url(../../../images/profile__edit-button.svg);
   background-position: bottom;
   background-size: contain;
   background-repeat: no-repeat;
