fix: правки после 1 ревью

--- a/blocks/element/__action-panel/element__action-panel.css
+++ b/blocks/element/__action-panel/element__action-panel.css
@@ -1,7 +1,7 @@
 .element__action-panel{
   background-color: white;
-  min-height: 23px;
-  width: 246px;
+  width: 100%;
+  max-width: 246px;
   display: flex;
   flex-direction: row;
   align-items: center;
