--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -4,7 +4,8 @@ margin: 0;
 font-size: 24px;
 font-weight: 900;
 line-height: 1.21;
-width: 219px;
+width: 100%;
+max-width: 219px;
 text-overflow: ellipsis;
 white-space: nowrap;
 overflow: hidden;
