--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,6 +5,8 @@
   padding-top: 45px;
   max-width: 68.75%;
   justify-content: flex-start;
+  border-bottom: 1px solid rgba(84,84,84, .7);
+  
 }
 
 @media screen and (max-width: 780px) {
