--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -5,13 +5,13 @@
   padding: 0;
   margin: 0;
   position: absolute;
-  top: -34px;
+  top: -40px;
   right: -40px;
   border: none;
   font: inherit;
   color: inherit;
   background-color: transparent;
-  background-size: contain;
+  background-position: center;
   cursor: pointer;
   outline: none;
 }
@@ -22,9 +22,10 @@
 
 @media screen and (max-width: 900px) {
   .popup__close-button{
-    height: 26px;
-    width: 26px;
+    height: 36px;
+    width: 36px;
     right: 0;
-    top: -30px;
+    top: -49px;
+    background-size: 100% auto;
   }
 } 
