--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,17 +1,17 @@
 .popup__container{
-  width: 430px;
+  width: 100%;
+  max-width: 430px;
   box-sizing: border-box;
   border-radius: 10px;
   background-color: white;
   opacity: 1;
   z-index: 2;
   position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   padding: 34px 36px 37px;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+  margin-top: 25vh;
 }
 
 @media screen and (max-width: 900px) {
