--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -11,6 +11,7 @@
   padding: 0;
   cursor: pointer;
   outline: none;
+  border-radius: 2px;
 }
 
 .popup__save-button:hover{
@@ -21,5 +22,6 @@
   .popup__save-button{
     background-image: url(../../../images/popup__save-button_small.svg);
     width: 100%;
+    height: 46px;
   }
 } 
