--- a/pages/index.css
+++ b/pages/index.css
@@ -27,6 +27,11 @@
 @import url('../blocks/popup/__header/popup__header.css');
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__save-button/popup__save-button.css');
+@import url('../blocks/picture-popup/picture-popup.css');
+@import url('../blocks/picture-popup/_opened/picture-popup_opened.css');
+@import url('../blocks/picture-popup/__container/picture-popup__container.css');
+@import url('../blocks/picture-popup/__subtitle/picture-popup__subtitle.css');
+
 
 
 
