--- a/blocks/picture-popup/__subtitle/picture-popup__subtitle.css
+++ b/blocks/picture-popup/__subtitle/picture-popup__subtitle.css
@@ -1,7 +1,9 @@
 .picture-popup__subtitle{
+  color: white;
   margin: 0;
   padding: 0;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.21;
+  padding-top: 10px;
 }
