--- a/blocks/picture-popup/__container/picture-popup__container.css
+++ b/blocks/picture-popup/__container/picture-popup__container.css
@@ -4,11 +4,9 @@
   box-sizing: border-box;
   opacity: 1;
   z-index: 2;
-  position: relative;
-  display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: auto;
   align-self: center;
-  margin-top: 12.5vh;
+  position: relative;
 }
 
