--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -6,11 +6,10 @@
   background-color: white;
   opacity: 1;
   z-index: 2;
-  position: relative;
   padding: 34px 36px 37px;
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: auto;
   margin-top: 25vh;
 }
 
