--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,4 +7,7 @@
   background-color: rgba(0,0,0, .5);
   z-index: 1;
   display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 1s linear, visibility 1s linear;
 }
