--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   margin: auto;
   margin-top: 25vh;
+  position: relative;
 }
 
 @media screen and (max-width: 900px) {
