--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,6 +1,6 @@
 .popup_opened{
-  display: block;
-  transition: opacity 1s linear, visibility 1s linear;
+  display: flex;
   visibility: visible;
   opacity: 1;
+  transition: visibility 0s, opacity 0.5s linear;
 }
