--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,5 +9,5 @@
   display: none;
   visibility: hidden;
   opacity: 0;
-  transition: opacity 1s linear, visibility 1s linear;
+  transition: visibility 0s, opacity 0.5s linear;
 }
