--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,8 +6,8 @@
   bottom: 0;
   background-color: rgba(0,0,0, .5);
   z-index: 1;
-  display: none;
+  display: flex;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s, opacity 0.5s linear;
+  transition: visibility 0s 1s, opacity 0.5s linear;
 }
