на 2 ревью до автотестов

--- a/blocks/element/__heart-icon/_liked/element__heart-icon_liked.css
+++ b/blocks/element/__heart-icon/_liked/element__heart-icon_liked.css
@@ -1,6 +1,7 @@
 .element__heart-icon_liked{
   background-image: url(../../../../images/element__heart-icon_liked.svg);
 }
-.element__heart-icon:hover{
-  opacity: 100%;
+.element__heart-icon_liked:hover{
+  opacity: 50%;
+  cursor: pointer;
 }
