--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -15,18 +15,16 @@
   overflow: hidden;
   box-sizing: border-box;
   padding-bottom: 13px;
-  margin-bottom: 30px;
+  
 }
 
 .popup__input:last-of-type{
-  margin-bottom: 48px;
+  margin-top: 30px;
 }
 
 @media screen and (max-width: 900px) {
   .popup__input{
     max-width: 238px;
   }
-  .popup__input:last-of-type{
-    margin-bottom: 45px;
-  }
+  
 } 
