--- a/pages/index.css
+++ b/pages/index.css
@@ -25,9 +25,13 @@
 @import url('../blocks/popup/_opened/popup_opened.css');
 @import url('../blocks/popup/__subtitle/popup__subtitle.css');
 @import url('../blocks/popup/__save-button/popup__save-button.css');
+@import url('../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css');
 @import url('../blocks/popup/__picture-container/popup__picture-container.css');
 @import url('../blocks/popup/__picture/popup__picture.css');
 @import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input-error/popup__input-error.css');
+@import url('../blocks/popup/__input-error/_visible/popup__input-error_visible.css');
+@import url('../blocks/popup/__input/_type/_error/popup__input_type_error.css');
 @import url('../blocks/popup/__header/popup__header.css');
 @import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__close-button/popup__close-button.css');
